--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   text-align: center;
   background-color: #181725;
   min-height: 100vh;
-  position: static;
+  position: absolute;
+  width: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,17 +14,13 @@
 
 .search {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  /* margin-top: 50px; */
-}
-
-.search__form {
-  flex-grow: 1;
+  margin-top: 60px;
 }
 
 .radius {
-  border-radius: 0.5rem;
+  border-radius: 1rem;
 }
 
 input {
@@ -35,7 +32,7 @@ input:focus {
 }
 
 input[type="text"] {
-  background-color: #201f2f;
+  background-color: #33314e;
   border: 0;
   padding: 1.5rem 1.5rem 1.5rem 5rem;
   color: #6b7986;
@@ -50,7 +47,7 @@ input[type="text"] {
 
 input[type="text"]:focus {
   background-color: #e6e6e6;
-  color: #201f2f;
+  color: #33314e;
 }
 
 .movies {
@@ -58,6 +55,7 @@ input[type="text"]:focus {
 }
 
 .movie {
+  flex-grow: 2;
   display: flex;
   color: #fefefe;
   margin-bottom: 1rem;
