--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,9 @@
   justify-content: center;
   align-items: center;
   margin-top: 60px;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .radius {
@@ -39,7 +42,7 @@ input[type="text"] {
   font-weight: 800;
   font-size: 2rem;
   width: 100%;
-  background-image: url("/public/images//search.png");
+  background-image: url("/public/images/search.png");
   background-repeat: no-repeat;
   background-size: auto 50%;
   background-position: 1rem 50%;
@@ -114,6 +117,7 @@ input[type="text"]:focus {
 }
 
 .movie-button {
+  background-color: #201f2f;
   font-size: large;
   font-weight: 700;
   width: "300px";
@@ -129,4 +133,11 @@ input[type="text"]:focus {
   cursor: pointer;
   /* color: black; */
   /* background-color: #f40; */
+}
+
+.empty-search-word {
+  color: white;
+  font-size: 40px;
+  font-weight: 700;
+  margin-top: 100px;
 }
