--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,8 +1,22 @@
 .header {
-  margin-top: 20px;
-  background-color: #181725;
+  background-color: #4a4864;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  font-family: "Permanent Marker", cursive;
   color: rgb(233, 75, 128);
+}
+
+.header-title{
+
   font-size: 50px;
   font-weight: 700;
-  font-family: "Permanent Marker", cursive;
+   
+}
+
+.header-categories{
+  font-size: 30px;
+
 }
