added year picker

--- a/src/style/searchBar.css
+++ b/src/style/searchBar.css
@@ -44,3 +44,8 @@ input[type="text"]:focus {
   border:none;
   border-radius:16px
 }
+
+.dropdown-year-options{
+  height: 200px;
+  overflow-y: scroll;
+}
