--- a/src/style/movie.css
+++ b/src/style/movie.css
@@ -5,6 +5,14 @@
   margin-bottom: 1rem;
 }
 
+.movie-detail {
+  margin-top: 50px;
+  flex-grow: 2;
+  display: flex;
+  color: #fefefe;
+  margin-bottom: 1rem;
+}
+
 .movie-Poster {
   border-top-left-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
@@ -12,6 +20,13 @@
   width: 400px; 
   overflow: hidden;
   /* object-fit:contain */
+}
+.movie-detail-poster{
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  /* height: 400px;
+  width: 400px;  */
+  object-fit: contain;
 }
 
 .movie-error {
@@ -37,6 +52,53 @@
   background: #201f2f;
   overflow: hidden;
 }
+.movie-detail-info-class{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  padding-left: 1rem;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  background: #201f2f;
+  overflow: hidden;
+  /* border: 1px solid red */
+}
+
+.movie-detail-title{
+  /* border: 1px solid red; */
+  font-weight: 700;
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+
+.movie-detail-basic-info-container{
+  display: flex;
+  flex-direction: row;
+  padding:20px;
+  gap:20px
+
+}
+
+.movie-detail-basic-info{
+  
+  width:50%;
+  padding: 10px;
+  border-radius: 10px;
+  border: 5px solid rgb(233, 75, 128);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around; 
+  align-items: start;
+
+}
+
+.movie-detail-plot-container{
+  display: flex; 
+  flex-direction: column;
+  font-size: 25px;
+}
+
 
 .movie-info-class:hover {
   background: rgba(207, 13, 65, 0.4);
