--- a/src/style/searchBar.css
+++ b/src/style/searchBar.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 100px;
+  margin-bottom: 30px;
   width: 50%;
   margin-left: auto;
   margin-right: auto;
