--- a/src/style/header.module.css
+++ b/src/style/header.module.css
@@ -8,7 +8,7 @@
 
 }
 
-.header-title{
+.header_title{
 
   font-family: "Permanent Marker", cursive;
   color: rgb(233, 75, 128);
@@ -17,7 +17,7 @@
    
 }
 
-.header-categories{
+.header_categories{
   font-size: 30px;
 
 }
