--- a/src/style/loading.module.css
+++ b/src/style/loading.module.css
@@ -8,7 +8,7 @@
     color: #fefefe;
 }
 
-.spinner-group{
+.spinner_group{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,7 +16,7 @@
     gap: 20px;
 }
 
-.loading-text{
+.loading_text{
     font-size: 25px;
     font-weight: bold;
 }
