--- a/src/style/moviePage.module.css
+++ b/src/style/moviePage.module.css
@@ -1,4 +1,4 @@
-.movie-detail{
+.movie_detail{
     font-family: sans-serif;
     color: #fefefe;
     text-align: center;
@@ -16,16 +16,16 @@
     text-align: left;
 }
 
-.movie-detail-title{
+.movie_detail_title{
     font-size: 35px;
     text-align: left;
 }
 
-.movie-date{
+.movie_date{
     font-weight: 700;
 }
 
-.avatar-container{
+.avatar_container{
     margin-top:30px;
     display: flex;
     flex-direction: row;
@@ -34,18 +34,18 @@
     gap:30px
 }
 
-.movie-avatar{
+.movie_avatar{
     border-radius: 10px;
     width:300px;
     object-fit: contain;
 
 }
 
-.movie-detail-container-title{
+.movie_detail_container_title{
     font-weight: bold;
 }
 
-.movie-detail-container-1{
+.movie_detail_container_1{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -53,7 +53,7 @@
     gap:50px;
 }
 
-.movie-detail-container-small{
+.movie_detail_container_small{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -61,13 +61,13 @@
 }
 
 
-.movie-personal{
+.movie_personal{
     display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: center;
 }
 
-.movie-personal-title{
+.movie_personal_title{
     font-weight: bold;
 }
