--- a/src/style/moviePage.module.css
+++ b/src/style/moviePage.module.css
@@ -71,3 +71,18 @@
 .movie_personal_title{
     font-weight: bold;
 }
+
+.movie_array{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    gap: 20px
+}
+
+.movie_item{
+    background-color:  rgb(233, 75, 128);
+    padding: 8px;
+    border-radius: 8px;
+}
