--- a/src/style/moviePage.module.css
+++ b/src/style/moviePage.module.css
@@ -77,12 +77,17 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     gap: 20px
 }
 
 .movie_item{
     background-color:  rgb(233, 75, 128);
-    padding: 8px;
+    padding: 3px 8px 3px 8px;
     border-radius: 8px;
+}
+
+.more_button{
+    font-weight: bold;
+    cursor: pointer;
 }
